# ISE_C

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
assets/data/: image.json  window.json
assets/data/engine/: mixer.json  resource.json
ise/: ise_error.py  test.py
ise/app/: __init__.py  app.py  resource.py
ise/environment/: __init__.py  camera.py  entity.py  scene.py
ise/environment/appearance/: animated_sprite.py
ise/environment/location/: __init__.py  advanced_loc.py  pymunk_loc.py  simple_loc.py  static_loc.py
ise/environment/position/: __init__.py  advanced_pos.py  pos.py  pymunk_pos.py  simple_pos.py  static_pos.py
ise/environment/sprite/: __init__.py  animated_sprite.py  debug_sprite.py  pymunk_sprite.py  rendering_techniques.py  simple_sprite.py
ise/instance/: __init__.py  base_instance.py  splash_screen.py
ise/instance/handlers/: __init__.py  event_handler.py  instance_handler.py  loop_handler.py
ise/objects/: __init__.py  cached_surface.py
ise_c/environment/: container.py
ise_c/environment/appearance/: simple_sprite.py
ise_c/environment/location/: errors_loc.py  simple_loc.py  static_loc.py
isec/: __init__.py
isec/app/: resource.py
isec/environment/: __init__.py  camera.py  entity.py
isec/environment/base/: __init__.py  rendering_techniques.py  scene.py  sprite.py
isec/gui/: button.py
isec/instance/: __init__.py  base_instance.py
test/: cached_surf_entity.py  floor_entity.py  moving_entity.py  origin_entity.py  physic_entity.py  rotating_entity.py  test.py  test_instance.py  test_tilemap.py
(+8 files in other folders)
